--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ cache:
   - '%LOCALAPPDATA%/Yarn'
   - node_modules
   - app/node_modules
-  - flow-typed
+  #- flow-typed
   - '%USERPROFILE%\.electron'
 
 matrix:
