--- a/package.json
+++ b/package.json
@@ -185,6 +185,8 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/register": "^7.7.0",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -244,6 +246,11 @@
     "testcafe-browser-provider-electron": "^0.0.12",
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.3.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.2",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.0.3",
@@ -255,6 +262,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@hot-loader/react-dom": "^16.11.0",
+    "@types/mocha": "^5.2.7",
+    "@types/react-router": "^5.1.3",
     "connected-react-router": "^6.6.0",
     "core-js": "3.4.1",
     "devtron": "^1.4.0",
