--- a/package.json
+++ b/package.json
@@ -185,8 +185,6 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/register": "^7.7.0",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -262,8 +260,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@hot-loader/react-dom": "^16.11.0",
-    "@types/mocha": "^5.2.7",
-    "@types/react-router": "^5.1.3",
+    "bootstrap": "^4.4.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.6.0",
     "core-js": "3.4.1",
     "devtron": "^1.4.0",
@@ -271,12 +269,14 @@
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "source-map-support": "^0.5.16"
