--- a/package.json
+++ b/package.json
@@ -268,14 +268,19 @@
     "electron-debug": "^3.0.1",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
+    "griddle-react": "^1.0.0",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-table": "^6.10.3",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
