--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,7 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.24.0"
+  }
 }
