--- a/package.json
+++ b/package.json
@@ -260,6 +260,7 @@
     "connected-react-router": "^6.6.0",
     "core-js": "3.4.1",
     "devtron": "^1.4.0",
+    "electron-db": "^0.15.3",
     "electron-debug": "^3.0.1",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
