--- a/package.json
+++ b/package.json
@@ -260,6 +260,7 @@
     "connected-react-router": "^6.6.0",
     "core-js": "3.4.1",
     "devtron": "^1.4.0",
+    "electron-alert": "^0.1.5",
     "electron-db": "^0.15.3",
     "electron-debug": "^3.0.1",
     "electron-log": "^3.0.9",
@@ -280,6 +281,8 @@
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "save-svg-as-png": "^1.4.14",
+    "smalltalk": "^4.0.2",
     "source-map-support": "^0.5.16"
   },
   "devEngines": {
