--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
       "package.json"
     ],
     "extraResources": [
-      "external/**"
+      "external/**",
+      "app/assets/**"
     ],
     "extraFiles": [
       "external/**"
