--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TIMon",
   "productName": "TIMon",
-  "version": "0.19.0",
+  "version": "0.20.0",
   "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
   "main": "./main.prod.js",
   "author": {
@@ -15,6 +15,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "sqlite3": "^4.1.1",
+    "typeorm": "0.2.17"
   }
 }
