--- a/package.json
+++ b/package.json
@@ -276,6 +276,7 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
+    "react-resizable": "^1.10.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-table": "^6.10.3",
